--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ html {
        </body>
 </html>
           </div>
-<img src="https://cdn.glitch.global/130b34f3-221f-4b39-b9bf-155ee5457ab2/12.jpg?v=1675810922342" alt="Self-portrait" width="184px"height="240px" 
+<img src="https://i.imgur.com/H4rHnlo.jpg" alt="Self-portrait" width="184px"height="240px" 
 ≤the default value>
   </img>                                                                 
                                                                           
